--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,48 @@
-*
+body {
+    background: wheat;
+}
+
+th {
+    color: yellow;
+}
+
+td, th {
+    text-align: center;
+    width: 220px;
+}
+
+table {
+    border: 3px solid black;
+
+}
+
+td {
+    height: 25px;
+}
+
+.grad{
+    background: linear-gradient(90deg, #8f0e0e, #eb7575);
+}
+.even {
+    background-color: #a81111;
+}
+
+.odd {
+    background-color: #8f0e0e;
+}
+
+td:nth-of-type(1) {
+    color:white;
+    font-weight: bold;
+}
+
+.max {
+    background-color: #7a0b0b;
+    color: white;
+}
+
+tr {
+    color: blue;
+}
+
+
